apps/memos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
  labels:
    homelab.cooked.beer/owner: sam
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
