apps/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  revisionHistoryLimit: 2

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: memos

  template:
    metadata:
      labels:
        app: memos

    spec:
      automountServiceAccountToken: false

      # Prevent Kubernetes from injecting MEMOS_PORT based on the
      # Service name.
      enableServiceLinks: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: memos
          image: neosmemo/memos:0.31.0@sha256:24c2707ddd8fbd2ceaa7a61ecab86a53cdcde640b24ce572b73da14b00b5785f
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5230

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 60

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          volumeMounts:
            - name: data
              mountPath: /var/opt/memos

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
