apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-web
  namespace: memos
spec:
  selector:
    app: memos

  ports:
    - name: http
      port: 80
      targetPort: http
